# Lit_search

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  README.md  pyproject.toml
docs/: license_header.txt
src/ring2/: __init__.py
src/ring2/adapters/: __init__.py
src/ring2/adapters/mpco/: __init__.py  adapter.py  claim_type_classifier.py  criteria_factory.py  decision_persistence.py  exclusion_codes.py  reg_722_2012.py  render_context.py  report_renderer.py  schema.py  table_mapping.py
src/ring2/adapters/mpco/appraisal/: __init__.py  arrive.py  astm_iso_material.py  base.py  care_caseseries.py  dispatcher.py  glp_oecd.py  grade.py  meddev_a6.py  registry.py  registry_authoritativeness.py  rob2.py  robins_i.py  rule_based_a6.py
src/ring2/adapters/pico/: __init__.py
src/ring2/cli/: __init__.py  run.py
src/ring2/core/: __init__.py  adapter_base.py  audit.py  orchestrator.py  persistence.py  prisma.py  project_config.py  project_config_loader.py  pubmed_client.py  screening.py  search.py  session.py  study_classifier.py
src/ring2/llm/: __init__.py  claude_a6_classifier.py  claude_client.py  claude_screener.py  json_response.py  prompts.py
src/ring2/ui/: __init__.py
tests/adapters/mpco/: test_adapter.py  test_claim_type_classifier.py  test_criteria_factory.py  test_decision_persistence.py  test_exclusion_codes.py  test_reg_722_2012.py  test_render_context.py  test_report_renderer.py  test_schema.py  test_table_mapping.py
tests/adapters/mpco/appraisal/: test_base.py  test_dispatcher.py  test_meddev_a6.py  test_registry.py  test_rule_based_a6.py  test_stubs.py
tests/core/: test_adapter_base.py  test_audit.py  test_orchestrator.py  test_persistence.py  test_prisma.py  test_project_config.py  test_project_config_loader.py  test_pubmed_client.py  test_screening.py  test_search.py  test_session.py  test_study_classifier.py
tests/llm/: test_llm.py
